<resources>
    <string name="app_name">Popov41PiLab04</string>

    <!--feedback-->
    <string name="sendButtonDescription">sendButtonDescription</string>
    <string name="logoDescription">logoDescription</string>

    <string name="qa">QA</string>
    <string name="devOps">DevOps</string>

    <string name="specialisation">Яку спеціалізацію ти обираєш, %s?</string>
    <string name="student">студент</string>

    <string name="addToCourse">Що б ти хотів включити в курс QA?</string>>
    <string name="add1">Лекції</string>>
    <string name="add2">Практичні</string>>
    <string name="add3">Лабораторні</string>
    <string name="choose">Обери, який з предметів тобі найцікавіший</string>

    <string-array name="subjectsQA">
        <item>QA subject 1</item>
        <item>QA subject 2</item>
        <item>QA subject 3</item>
    </string-array>

    <string-array name="subjectsDevOps">
        <item>DevOps subject 1</item>
        <item>DevOps subject 2</item>
        <item>DevOps subject 3</item>
    </string-array>

    <!--login-->

    <string name="hello">Вітаю! Обери предмети, які ті будеш вивчати на чевертому курсі.</string>

    <string name="name">Ім\'я</string>
    <string name="surname">Призвище</string>
    <string name="chooseButton">Обери предмети</string>
    <string name="outStr">Студент: %s %s\nОбрав спеціальність: %s\nОбрав активності: %s\nЗацікавився предметом: %s</string>


</resources>
